<resources>
    <string name="app_name">Binding ViewModal</string>
    <string name="name_label">Name:</string>
    <string name="label_lastname">Lastname:</string>
    <string name="like">Likes:</string>
    <string name="like_button">Like</string>
    <string name="list_of_employees">List of employees:</string>
    <string name="image">Image</string>
    <string name="image_avatar">image avatar</string>
</resources>