<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewmodel" type="com.example.bindingviewmodal.ui.MainViewModal" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvLabelName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name_label"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHelp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@{viewmodel.name}"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHelp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelName"
            tools:text="name" />

        <TextView
            android:id="@+id/tvLabelLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_lastname"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHelp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@{viewmodel.lastName}"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHelp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelLastName"
            tools:text="lastName" />

        <TextView
            android:id="@+id/tvLabelLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guidelineHelp" />

        <TextView
            android:id="@+id/tvLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@{Integer.toString(viewmodel.like)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelLike"
            app:layout_constraintStart_toEndOf="@+id/guidelineHelp"
            tools:text="5" />

        <Button
            android:id="@+id/buttonLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_button"
            android:onClick="@{() -> viewmodel.onLike()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guidelineHelp"
            app:layout_constraintTop_toBottomOf="@+id/tvLike" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:hideIfZero="@{viewmodel.like}"
            app:progressScaled="@{viewmodel.like}"
            android:max="@{100}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guidelineHelp"
            app:layout_constraintTop_toBottomOf="@+id/buttonLike"
            tools:progressBackgroundTint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvLabelEmployees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_employees"
            android:layout_margin="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHelp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

        <TextView
            android:id="@+id/tvListEmployee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{viewmodel.employees.listEmployees}"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHelp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelEmployees"
            tools:text="list of employee"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>